# all-in-one-dashboard

./: Dockerfile  README.md  contactme.md  pyproject.toml
backend/: api_server.py
frontend/: index.html  script.js  style.css
nginx/: default.conf
supervisor/: supervisord.conf
